--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
 
                 <!-- Education & Experience -->
                 <div class="resume-column" data-aos="fade-left">
