Add Netlify form integration with spam protection

--- a/index.html
+++ b/index.html
@@ -608,7 +608,11 @@
                 </div>
 
                 <div class="contact-form" data-aos="fade-left">
-                    <form id="contactForm">
+                    <form id="contactForm" name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field">
+                        <input type="hidden" name="form-name" value="contact">
+                        <p style="display: none;">
+                            <label>Don't fill this out if you're human: <input name="bot-field"></label>
+                        </p>
                         <div class="form-group">
                             <input type="text" name="name" placeholder="Your Name" required>
                         </div>
