Update index.html with recent changes

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
                 </div>
 
                 <div class="contact-form" data-aos="fade-left">
-                    <form id="contactForm" name="contact" method="POST" action="success.html" data-netlify="true" data-netlify-honeypot="bot-field">
+                    <form id="contactForm" name="contact" method="POST" action="success.html" data-netlify="true" data-netlify-honeypot="bot-field" NETlify>
                         <input type="hidden" name="form-name" value="contact">
                         <p style="display: none;">
                             <label>Don't fill this out if you're human: <input name="bot-field"></label>
